<resources>
    <string name="app_name">Adivina Quien</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="nick">Nick</string>
    <string name="prompt_password">Password</string>
    <string name="check_password">Repet Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passtext">Copntrasenia</string>
    <string name="action_tosecpass">Siguiente</string>
    <string name="passcheck2">repet Contrasenia</string>
    <string name="title_activity_fullscreen2">FullscreenActivity2</string>
    <string name="nicktext">Nick:</string>
</resources>