<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:visibility="gone"
        android:id="@+id/checkpass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/newpassword2"
        app:layout_constraintStart_toEndOf="@+id/newpassword2"
        app:layout_constraintTop_toTopOf="@+id/newpassword2"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/checkpass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/newpassword"
        app:layout_constraintStart_toEndOf="@+id/newpassword"
        app:layout_constraintTop_toTopOf="@+id/newpassword"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/checkemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/newemail"
        app:layout_constraintStart_toEndOf="@+id/newemail"
        app:layout_constraintTop_toTopOf="@+id/newemail"
        app:srcCompat="@drawable/ic_baseline_check_24" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Correo Electronico:"
        app:layout_constraintBottom_toBottomOf="@+id/newemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newemail" />

    <EditText
        android:id="@+id/newemail"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/newnick" />

    <EditText
        android:id="@+id/newnick"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/nick"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/passtext"
        app:layout_constraintBottom_toBottomOf="@+id/newpassword"
        app:layout_constraintEnd_toStartOf="@+id/newpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newpassword" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/newemail" />

    <EditText
        android:id="@+id/newpassword2"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/check_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/newpassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:text="@string/passcheck2"
        app:layout_constraintBottom_toBottomOf="@+id/newpassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newpassword2" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="NickName: "
        app:layout_constraintBottom_toBottomOf="@+id/newnick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newnick" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Avatar: "
        app:layout_constraintBottom_toBottomOf="@+id/newimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newimage" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/newimage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/common_google_signin_btn_icon_dark"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/newpassword2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnselectimg"
        android:layout_width="134dp"
        android:layout_height="56dp"
        android:text="Seleccionar Imagen"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/newimage"
        app:layout_constraintEnd_toEndOf="@+id/newpassword2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/newimage"
        app:layout_constraintTop_toTopOf="@+id/newimage"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btncheck"
        android:layout_width="137dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:text="Comprobar"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnselectimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnselectimg"
        app:layout_constraintTop_toTopOf="@+id/btnselectimg" />

    <TextView
        android:id="@+id/alertemail"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="El Correo ya Existe"
        app:layout_constraintEnd_toEndOf="@+id/newemail"
        app:layout_constraintStart_toStartOf="@+id/newemail"
        app:layout_constraintTop_toBottomOf="@+id/newemail" />

    <TextView
        android:id="@+id/alerpass"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Las Contrasenias no Coinciden"
        app:layout_constraintEnd_toEndOf="@+id/newpassword2"
        app:layout_constraintStart_toStartOf="@+id/newpassword2"
        app:layout_constraintTop_toBottomOf="@+id/newpassword2" />


</androidx.constraintlayout.widget.ConstraintLayout>